# CSS436-Cloud-Computing

./: .gitignore  README.md
prog1/src/: WebCrawl.java
prog2/src/: MyCity.java  build.sh
prog3/: backup.py  prog3.py
prog3/test/test1/: testfile1.1.txt
prog3/test/testdir1/: testfile1.1.txt
prog4/: .gitignore  Cargo.toml  README.MD  style.css
prog4/back-end/: Cargo.toml  data_to_upload_s3.txt
prog4/back-end/src/: lib.rs  main.rs
prog4/back-end/src/dynamodb/: ddb_lib.rs  mod.rs  upload.rs
prog4/back-end/src/file/: file_lib.rs  mod.rs  parse.rs  read.rs  write.rs
prog4/back-end/src/http_call/: get_site_data.rs  mod.rs
prog4/back-end/src/s3/: mod.rs  s3_lib.rs  upload.rs
prog4/front-end/: Cargo.toml  index.html  style.css
prog4/front-end/src/: main.rs  read_site.rs  text_input.rs
prog4/src/: main.rs  text_input.rs
