[package]
name = "back-end"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.2"

reqwest = "0.11.14"

aws-config = "0.54.1"
aws-sdk-dynamodb = "0.24.0"
aws-sdk-s3 = "0.24.0"

tokio = { version = "1", features = ["full"] }

